Updated the compiler more and started working on subject class and overall structure