@@ -1,6 +1,7 @@
+import sub.Program;
+import sub.Subject;
 import utils.ProgramCompiler;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -8,9 +9,12 @@ import java.util.List;
 public class Main {
     public static final String CWD = System.getProperty("user.dir");
     public static void main(String[] args) {
+        System.out.println(CWD);
 
         ProgramCompiler compiler = new ProgramCompiler();
-        HashMap<?,?> directories = compiler.compileWithNames(Arrays.asList(CWD+"/TestPrograms/Person.java"));
-        System.out.println(directories);
+        HashMap<String,List<String>> input = new HashMap<>();
+        input.put("Quagmire", List.of(CWD+"\\TestPrograms\\Person.java"));
+        List<Subject> subjects = compiler.compileToSubject(input);
+        System.out.println(subjects);
     }
 }
